--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -5,3 +5,24 @@
 .hidden {
   display: none;
 }
+
+.nav-bar {
+position: absolute;
+top: 0;
+bottom: 0;
+height: 100%;
+left: 0;
+background: gray;
+width: 15vw;
+overflow: hidden;
+transition: width 0.2s linear;
+margin: 0;
+padding: 0;
+}
+
+.button-container {
+  display: flex;
+  height: 50vh;
+  flex-direction: column;
+  justify-content: space-between;
+}
