--- a/react-app/src/components/Notes/Notes.css
+++ b/react-app/src/components/Notes/Notes.css
@@ -1,5 +1,13 @@
 .one_note {
-    padding: 20px
+    border: 2px solid gray;
+    width: 50%;
+    height: 100px;
+    padding: 20px;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .notes-container {
@@ -8,12 +16,14 @@
     flex-direction: column;
     align-items: center;
     /* justify-content: center; */
-    width: 80vw;
-    height: 100vh;
+    width: 60vw;
+    height: 80vh;
     margin-left: 20vw;
     /* margin-bottom: 18vw; */
     display: absolute;
     position: fixed;
     /* top: 0px; */
+    grid-gap: 20px;
+    gap: 20px;
     overflow: scroll;
 }
