--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -7,17 +7,21 @@
 }
 
 .nav-bar {
-position: absolute;
-top: 0;
-bottom: 0;
-height: 100%;
-left: 0;
-background: gray;
-width: 15vw;
-overflow: hidden;
-transition: width 0.2s linear;
-margin: 0;
-padding: 0;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  height: 100%;
+  left: 0;
+  background: gray;
+  width: 15vw;
+  overflow: hidden;
+  transition: width 0.2s linear;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  list-style-type: none;
+  padding: 0
 }
 
 .button-container {
