--- a/react-app/src/components/Notes/Notes.css
+++ b/react-app/src/components/Notes/Notes.css
@@ -7,7 +7,7 @@
     flex-direction: row;
     gap: 10px;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .notes-container {
