--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -28,5 +28,15 @@
   display: flex;
   height: 50vh;
   flex-direction: column;
+  align-items: center;
   justify-content: space-between;
+  padding-top: 10px;
+}
+
+#component-buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 35px;
 }
