--- a/react-app/src/components/Notes/Notes.css
+++ b/react-app/src/components/Notes/Notes.css
@@ -16,14 +16,22 @@
     flex-direction: column;
     align-items: center;
     /* justify-content: center; */
-    width: 60vw;
-    height: 80vh;
+    width: 68vw;
+    height: 41vh;
     margin-left: 20vw;
     /* margin-bottom: 18vw; */
     display: absolute;
     position: fixed;
-    /* top: 0px; */
-    grid-gap: 20px;
     gap: 20px;
+    overflow: scroll;
+}
+
+.notes-container h1 {
+   width: 100%;
+}
+.note-card-container {
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
     overflow: scroll;
 }
