--- a/react-app/src/components/Notes/Notes.css
+++ b/react-app/src/components/Notes/Notes.css
@@ -2,12 +2,13 @@
     border: 2px solid gray;
     width: 50%;
     height: 100px;
-    padding: 20px;
+    padding: 47px;
     display: flex;
     flex-direction: row;
     gap: 10px;
     align-items: center;
     justify-content: center;
+    border-radius: 15px;
 }
 
 .notes-container {
@@ -34,4 +35,10 @@
     flex-direction: row;
     gap: 50px;
     overflow: scroll;
+}
+
+#notes-content{
+    display: flex;
+    flex-direction: column;
+    gap: 85px;
 }
