--- a/react-app/src/components/Notes/Notes.css
+++ b/react-app/src/components/Notes/Notes.css
@@ -1,30 +1,36 @@
 .one_note {
     border: 2px solid gray;
     width: 50%;
-    height: 100px;
-    padding: 47px;
+    height: 175px;
+    padding: 15px;
     display: flex;
     flex-direction: row;
     gap: 10px;
     align-items: center;
     justify-content: center;
     border-radius: 15px;
+    background-color: black;
+    color: white
 }
 
 .notes-container {
-    border: 2px solid red;
-    display: flex;
+    border: 18px solid rgb(193, 98, 0);
+    border-style: outset;
     flex-direction: column;
     align-items: center;
-    /* justify-content: center; */
     width: 68vw;
-    height: 41vh;
+    height: auto;
     margin-left: 20vw;
-    /* margin-bottom: 18vw; */
-    display: absolute;
+    padding-bottom: 50px;
     position: fixed;
+    grid-gap: 20px;
     gap: 20px;
-    overflow: scroll;
+    background: rgba(136, 22, 0);
+    border-radius: 28px;
+}
+
+.notes-container:hover {
+    box-shadow: 0px 0px 80px rgb(227 227 106);
 }
 
 .notes-container h1 {
@@ -33,12 +39,20 @@
 .note-card-container {
     display: flex;
     flex-direction: row;
+    grid-gap: 50px;
     gap: 50px;
     overflow: scroll;
+    padding-left: 20px;
 }
 
 #notes-content{
     display: flex;
     flex-direction: column;
+    width: 86px;
+    grid-gap: 85px;
     gap: 85px;
+}
+
+#note-title {
+    padding-left: 10px;
 }
