--- a/react-app/src/components/Notes/Notes.css
+++ b/react-app/src/components/Notes/Notes.css
@@ -118,3 +118,25 @@
 body {
     margin: 0
 }
+
+.whole-notes-container {
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
+}
+
+#Note-Component {
+    width: 45vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#note-design-container {
+    width: 46vw;
+    height: 60vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
