--- a/react-app/src/components/SingleNote/SingleNote.css
+++ b/react-app/src/components/SingleNote/SingleNote.css
@@ -1,6 +1,5 @@
 .single-note-container {
-    margin-left: 20vw;
-    height: 80vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
