Added CSS and refactored components due to render issues

--- a/react-app/src/components/HomePage/HomePage.css
+++ b/react-app/src/components/HomePage/HomePage.css
@@ -3,6 +3,7 @@ body {
     color: white;
     font-family: 'Dancing Script', cursive;
     font-family: 'Raleway', sans-serif;
+    opacity: .87
 }
 
 #notes-additional-style-container {
