--- a/react-app/src/components/CreateNote/CreateNote.css
+++ b/react-app/src/components/CreateNote/CreateNote.css
@@ -1,8 +1,9 @@
 .create-note-container {
-    margin-left: 20vw;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    /* height: 100vh; */
+    padding: 30px;
+    gap: 30px;
 }
