--- a/react-app/src/components/HomePage/HomePage.css
+++ b/react-app/src/components/HomePage/HomePage.css
@@ -3,7 +3,8 @@ body {
     color: white;
     font-family: 'Dancing Script', cursive;
     font-family: 'Raleway', sans-serif;
-    opacity: .87
+    opacity: .87;
+    text-decoration-line: none;
 }
 
 #notes-additional-style-container {
