--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -31,11 +31,13 @@
   flex-direction: column;
   align-items: center;
   list-style-type: none;
-  padding: 0
+  padding: 0;
+  border-right: 2px solid gray;
 }
 
 .nav-bar:hover {
-  box-shadow: 16px 0px 9px rgb(227, 227, 106);
+  transition: 0.3s;
+  background-color: rgba(46, 41, 41, 0.65);
 }
 
 .button-container {
@@ -98,6 +100,7 @@
   font-family: 'Raleway', sans-serif;
 }
 #component-buttons-one li a:hover {
+  transition: 0.3s;
   background: linear-gradient(rgba(227, 227, 106), rgba(136, 22, 0)) padding-box, linear-gradient(45deg, white, black), border-box;
   box-shadow: 0px 10px 5px rgba(227, 227, 106);
   color: black
