--- a/react-app/src/components/Notes/Notes.css
+++ b/react-app/src/components/Notes/Notes.css
@@ -61,8 +61,8 @@
 .notes-side-panel-container {
     padding: 0;
     margin: 0;
-    padding-left: 14.3vw;
-    width: 30vw;
+    padding-left: 15vw;
+    width: 21vw;
     max-width: 30vw;
     /* margin-left: 28.5vh; */
     border-right: 5px solid gray;
@@ -92,17 +92,30 @@
     /* border-radius: 15px; */
     /* background-color: black; */
     border-bottom: 2px solid gray;
-    color: white
+    color: white;
+    background-color: transparent;
+    font-family: 'Dancing Script', cursive;
+    font-family: 'Raleway', sans-serif;
+}
+
+.side-panel-one-note:hover {
+    transition: 0.3s;
+    background-color: rgba(0, 0, 0, 0.566)
 }
 
 #side-panel-notes-content {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    padding-left: 15px;
-    padding-top: 10px;
+    /* padding-left: 15px; */
+    /* padding-top: 10px; */
     color: white;
-    padding-top: 10px
+    padding-top: 10px;
+    width: 100%;
+    height: 81%;
+    grid-gap: 15px;
+    gap: 15px;
+    padding: 10px;
 }
 
 #side-panel-break-line {
@@ -126,7 +139,7 @@ body {
 }
 
 #Note-Component {
-    width: 45vw;
+    width: 51vw;
     display: flex;
     justify-content: center;
     align-items: center;
