--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -62,7 +62,8 @@
   flex-direction: column;
   gap: 20px;
 }
-#component-buttons-one li a {
+
+#component-buttons-one {
   text-decoration: none;
   display: flex;
   flex-direction: column;
@@ -92,19 +93,26 @@
   align-items: center;
   border: 5px solid transparent;
   border-radius: 24px;
-  background: linear-gradient(rgb(193, 98, 0), black) padding-box, linear-gradient(45deg, rgba(212, 223, 158), white), border-box;
+  background: transparent;
   width: 20vw;
   color: white;
   height: 30px;
   font-family: 'Dancing Script', cursive;
   font-family: 'Raleway', sans-serif;
 }
+
+#component-buttons-one button:hover {
+  transition: 0.3s;
+  background: #216869;
+}
+
 #component-buttons-one li a:hover {
   transition: 0.3s;
   background: linear-gradient(rgba(227, 227, 106), rgba(136, 22, 0)) padding-box, linear-gradient(45deg, white, black), border-box;
   box-shadow: 0px 10px 5px rgba(227, 227, 106);
   color: black
 }
+
 #component-buttons-two li a {
   text-decoration: none;
   display: flex;
@@ -113,17 +121,18 @@
   align-items: center;
   border: 5px solid transparent;
   border-radius: 24px;
-  background: linear-gradient(rgb(193, 98, 0), black) padding-box, linear-gradient(45deg, rgba(212, 223, 158), white), border-box;
+  background: transparent;
   width: 20vw;
   color: white;
-  height: 30px
+  height: 30px;
+  font-family: 'Dancing Script', cursive;
+  font-family: 'Raleway', sans-serif;
 }
 
 #component-buttons-two li a:hover {
-  background: linear-gradient(rgba(227, 227, 106), rgba(136, 22, 0)) padding-box, linear-gradient(45deg, white, black), border-box;
-  box-shadow: 0px 10px 5px rgba(227, 227, 106);
+  transition: 0.3s;
+  background: #216869;
   color: black
-
 }
 
 #component-buttons-two {
