--- a/react-app/src/components/Notes/Notes.css
+++ b/react-app/src/components/Notes/Notes.css
@@ -10,11 +10,12 @@
     justify-content: center;
     border-radius: 15px;
     background-color: black;
-    color: white
+    color: white;
+    text-decoration: none;
 }
 
 .notes-container {
-    border: 18px solid rgb(193, 98, 0);
+    border: 18px solid gray;
     border-style: outset;
     flex-direction: column;
     align-items: center;
@@ -24,13 +25,10 @@
     padding-bottom: 50px;
     position: fixed;
     grid-gap: 20px;
+    grid-gap: 20px;
     gap: 20px;
-    background: rgba(136, 22, 0);
+    background: #216869;
     border-radius: 28px;
-}
-
-.notes-container:hover {
-    box-shadow: 0px 0px 80px rgb(227 227 106);
 }
 
 .notes-container h1 {
@@ -44,6 +42,7 @@
     gap: 50px;
     overflow: scroll;
     padding-left: 30px;
+    padding-right: 30px;
 }
 
 #notes-content {
