--- a/react-app/src/components/SingleNotebook/SingleNotebook.css
+++ b/react-app/src/components/SingleNotebook/SingleNotebook.css
@@ -1,3 +1,25 @@
 #notebook-notes-container {
     margin-left: 20vw;
+    width: 70vw
+}
+
+#notebooks-title {
+    margin-left: 20vw
+}
+
+#notebook-notes-container a {
+    display: flex;
+    width: 100%;
+    height: 45px;
+    align-items: center;
+    padding-left: 30px;
+    color: white;
+    text-decoration: none;
+    justify-content: space-between;
+    padding-right: 30px;
+}
+
+#notebook-notes-container a:hover {
+    transition: 0.3s;
+    background-color: rgba(39, 34, 34, 0.566);
 }
