--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -1,15 +1,15 @@
 .profile-dropdown {
   position: absolute;
   display: flex;
-  justify-content: center;
+  justify-content: SPACE-BETWEEN;
   align-items: center;
   width: 15vw;
   padding: 0;
   list-style: none;
   flex-direction: column;
-  background: white;
+  background: transparent;
   right: 0px;
-  gap: 10px;
+  top: 53px
 }
 
 .hidden {
@@ -42,7 +42,7 @@
 
 .button-container {
   display: flex;
-  height: 70vh;
+  height: 80vh;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
