--- a/react-app/src/components/SignupFormModal/SignupForm.css
+++ b/react-app/src/components/SignupFormModal/SignupForm.css
@@ -7,3 +7,23 @@
     border-radius: 20px;
     border: inset 10px #9CC5A1;
 }
+
+.profile-dropdown button {
+    background: transparent;
+     border: 2px solid red;
+    /* border-radius: 15px; */
+    width: 100%;
+    padding: 5px;
+    margin-top: 15px;
+    color: white;
+    border: none;
+    font-size: large;
+    font-family: 'Dancing Script', cursive;
+    font-family: 'Raleway', sans-serif;
+}
+
+.profile-dropdown button:hover {
+    transition: 0.3s;
+    background: #216869;
+    color: black
+}
