CSS for majority of site and modals

--- a/react-app/src/components/HomePage/HomePage.css
+++ b/react-app/src/components/HomePage/HomePage.css
@@ -28,11 +28,22 @@ body {
 }
 
 .notebook-notes-inner-container {
+background-color: rgb(32, 32, 32);
+}
+
+.notebook-notes-inner-container:hover {
+transition: 0.3s;
 background-color: #216869;
 }
 
 .notebook-notes-inner-container-two {
+background-color: rgb(32, 32, 32);
+}
+
+.notebook-notes-inner-container-two:hover {
+transition: 0.3s;
 background-color: #49A078;
+
 }
 
 #Notebooks-title {
