--- a/react-app/src/components/SingleNotebook/SingleNotebook.css
+++ b/react-app/src/components/SingleNotebook/SingleNotebook.css
@@ -18,8 +18,8 @@
     justify-content: space-between;
     padding-right: 30px;
 }
-
+/* 
 #notebook-notes-container a:hover {
     transition: 0.3s;
-    background-color: rgba(39, 34, 34, 0.566);
-}
+    background-color: #216869;
+} */
