--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -32,7 +32,7 @@
   align-items: center;
   list-style-type: none;
   padding: 0;
-  border-right: 2px solid gray;
+  border-right: 2px solid #9CC5A1;
 }
 
 .nav-bar:hover {
@@ -139,4 +139,15 @@
   display: flex;
   flex-direction: column;
   gap: 30px;
+}
+
+.profile-dropdown li {
+  width: 100%;
+}
+
+.profile-letter-button {
+  width: 35px;
+  height: 35px;
+  border-radius: 20px;
+  border: none;
 }
