--- a/react-app/src/components/SignupFormModal/SignupForm.css
+++ b/react-app/src/components/SignupFormModal/SignupForm.css
@@ -1,11 +1,12 @@
 #modal-content {
-    width: 40vw;
+    width: auto;
     color: white;
-    background: darkgray;
+    background: linear-gradient(#49A078, black);
     height: auto;
     position: absolute;
     border-radius: 20px;
     border: inset 10px #9CC5A1;
+    padding: 30px;
 }
 
 .profile-dropdown button {
