--- a/react-app/src/components/SingleNote/SingleNote.css
+++ b/react-app/src/components/SingleNote/SingleNote.css
@@ -1,7 +1,51 @@
 .single-note-container {
     height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 60px;
+}
+
+#button-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    GAP: 25px;
+}
+
+#button-container button {
+    background: none;
+    border: none;
+    color: white;
+    border: 2px solid #9CC5A1;
+    height: 40px;
+    border-radius: 20px;
+}
+
+
+#button-container button:hover {
+    color: white;
+    transition: 0.3s;
+    background: #216869;
+}
+
+#edit-button-container button {
+    background: none;
+    border: none;
+    color: white;
+    border: 2px solid #9CC5A1;
+    height: 40px;
+    border-radius: 20px;
+}
+
+#edit-button-container button:hover {
+    color: white;
+    transition: 0.3s;
+    background: #216869;
+}
+
+#edit-button-container {
+    padding-top: 40px
 }
