--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -150,4 +150,12 @@
   height: 35px;
   border-radius: 20px;
   border: none;
+  background: gray;
+}
+
+.profile-letter-button:hover {
+  transition: 0.3s;
+  background: #9CC5A1;
+  border: inset 1px #216869;
+  box-shadow: 0px 0px 30px #9cc5a1;
 }
