Added CSS to note cards in notes component

--- a/react-app/src/components/HomePage/HomePage.css
+++ b/react-app/src/components/HomePage/HomePage.css
@@ -17,7 +17,7 @@ body {
     position: relative;
     right: 20px;
     top: 24px;
-    background: #49A078;
+    background: black;
     padding-bottom: 30px;
 }
 
