--- a/react-app/src/components/SignupFormModal/SignupForm.css
+++ b/react-app/src/components/SignupFormModal/SignupForm.css
@@ -1,7 +1,7 @@
 #modal-content {
     width: auto;
     color: white;
-    background: linear-gradient(#49A078, black);
+    background: linear-gradient(#216869, black);
     height: auto;
     position: absolute;
     border-radius: 20px;
