--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -104,6 +104,7 @@
 #component-buttons-one button:hover {
   transition: 0.3s;
   background: #216869;
+  color: #9CC5A1;
 }
 
 #component-buttons-one li a:hover {
@@ -132,7 +133,7 @@
 #component-buttons-two li a:hover {
   transition: 0.3s;
   background: #216869;
-  color: black
+  color: #9CC5A1
 }
 
 #component-buttons-two {
@@ -154,8 +155,9 @@
 }
 
 .profile-letter-button:hover {
-  transition: 0.3s;
-  background: #9CC5A1;
-  border: inset 1px #216869;
-  box-shadow: 0px 0px 30px #9cc5a1;
+    transition: 0.3s;
+    background: linear-gradient(#216869, #9CC5A1);
+    border: inset 1px #216869;
+    box-shadow: 0px 0px 30px #9cc5a1;
+    color: White
 }
