Added error validations to all modal forms on site

--- a/react-app/src/components/HomePage/HomePage.css
+++ b/react-app/src/components/HomePage/HomePage.css
@@ -47,5 +47,9 @@ background-color: #49A078;
 }
 
 #Notebooks-title {
-    margin-left: 20vw
+    margin-left: 20vw;
+    width: 70vw;
+    display: flex;
+    justify-content: center;
+    padding: 20px;
 }
