--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -1,15 +1,16 @@
 .profile-dropdown {
   position: absolute;
   display: flex;
-  justify-content: SPACE-BETWEEN;
+  justify-content: center;
   align-items: center;
   width: 15vw;
   padding: 0;
   list-style: none;
   flex-direction: column;
-  background: transparent;
+  background: gray;
   right: 0px;
-  top: 53px
+  top: 53px;
+  gap: 10px
 }
 
 .hidden {
@@ -168,7 +169,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 12px;
+  margin-top: 7px;
+  gap: 10px;
 }
 
 .about-me-button-linkedin img {
