--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -7,10 +7,11 @@
   padding: 0;
   list-style: none;
   flex-direction: column;
-  background: gray;
+  background: linear-gradient(#216869, black);
   right: 0px;
-  top: 53px;
-  gap: 10px
+  grid-gap: 10px;
+  gap: 10px;
+  margin-top: 10px
 }
 
 .hidden {
@@ -209,4 +210,15 @@
   align-items: center;
   flex-direction: column;
   gap: 10px;
+}
+
+#logo-filler {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  bottom: 18px;
+  font-size: x-large
 }
