--- a/react-app/src/components/SplashPage/Splashpage.css
+++ b/react-app/src/components/SplashPage/Splashpage.css
@@ -38,6 +38,16 @@
   text-align: center;
 }
 
+#splash-page-h1-nav {
+  font-family: 'Rampart One', cursive;
+  width: 50%;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  
+}
+
 #thought-bubble {
   width: 120px;
   height: 100px;
@@ -127,7 +137,7 @@
   border-radius: 50%;
   background-image: linear-gradient(80deg, #21686985, #49A078);
   filter: blur(40px);
-  animation: right 20s infinite;
+  animation: right 25s infinite;
 }
 
 @keyframes down {
@@ -141,16 +151,16 @@
 
 @keyframes up {
   0%, 100%{
-    bottom: -100px
+    bottom: 700px
   }
   70%{
-    bottom: 700px
+    bottom: -700px
   }
 }
 
 @keyframes left {
   0%, 100%{
-    left: 200px
+    left: -700px
   }
   70%{
     left: 700px
@@ -162,6 +172,6 @@
     right: 700px
   }
   70%{
-    right: 200px
+    right: -700px
   }
 }
