--- a/react-app/src/components/Notebooks/Notebooks.css
+++ b/react-app/src/components/Notebooks/Notebooks.css
@@ -75,3 +75,10 @@
     justify-content: center;
     align-items: center;
 }
+
+#inner-notebooks-container-title-bar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
