--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -25,7 +25,7 @@
   height: 100%;
   left: 0;
   background: black;
-  width: 15vw;
+  width: 17vw;
   overflow: hidden;
   transition: width 0.2s linear;
   margin: 0;
@@ -38,19 +38,15 @@
   z-index: 1000;
 }
 
-.nav-bar:hover {
-  transition: 0.3s;
-  background-color: rgba(46, 41, 41, 0.65);
-}
 
 .button-container {
   display: flex;
   height: 80vh;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
   padding-top: 10px;
   width: 100%;
+  gap: 4%;
 }
 
 .button-container li {
@@ -59,10 +55,34 @@
 
 #component-buttons {
   display: flex;
-  align-items: center;
-  justify-content: center;
   flex-direction: column;
-  gap: 100px;
+  width: 100%;
+}
+
+#component-buttons li {
+  display: flex;
+  flex-direction: row;
+  gap: 9%;
+  padding-left: 8%;
+  align-items: center;
+  width: 92%;
+  height: 28px;
+  color: #216869
+}
+
+#component-buttons li:hover {
+  transition:0.3s;
+  background-color: rgb(72, 72, 72);
+}
+
+#component-buttons li:hover i {
+  transition: 0.3s;
+  color: #9CC5A1
+}
+
+#component-buttons li a {
+  color: white;
+  text-decoration: none;
 }
 
 #component-buttons-one {
@@ -254,9 +274,9 @@
 }
 
 .dropdown-button {
-  background-color: #f5f5f5;
+  background: linear-gradient(#216869, #9CC5A1);
   border: 1px solid #ddd;
-  border-radius: 3px;
+  border-radius: 20px;
   color: #333;
   cursor: pointer;
   padding: 4px;
@@ -265,6 +285,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  height: 30px;
 }
 
 .dropdown-menu {
@@ -272,7 +293,7 @@
   border: 1px solid #ddd;
   border-radius: 3px;
   position: absolute;
-  top: 100%;
+  top: 120%;
   width: 80%;
   display: flex;
   justify-content: center;
@@ -284,32 +305,36 @@
 
 .dropdown-item {
   color: #333;
-  display: block;
   text-decoration: none;
   display: flex;
   flex-direction: row;
-  grid-gap: 4%;
-  grid-gap: 4%;
   gap: 4%;
   padding-left: 6%;
   padding-right: 6%;
-  margin: 5%;
+  margin: 3%;
+  border-radius: 20px;
+  background: white;
+  height: 30px;
+  align-items: center;
 }
 
-.dropdown-item:hover {
+/* .dropdown-item:hover {
   transition: 0.3s;
   background-color: #ddd;
-}
+} */
 
 .open-carrot {
+  color: white;
   transform: rotate(180deg);
 }
 
 #plus-new {
   display: flex;
-  flex-direction: row;
-  gap: 8%;
-  width: 50%;
+    flex-direction: row;
+    grid-gap: 8%;
+    gap: 8%;
+    width: 50%;
+    color: white;
 }
 
 .open {
@@ -317,6 +342,7 @@
   transition: opacity 0.3s ease, transform 0.3s ease;
   pointer-events: auto;
   transform: scaleY(1);
+  background-color: rgb(72, 72, 72);
 }
 
 #dropdown-buttons {
@@ -327,13 +353,19 @@
   width: 100%;
   display: flex;
   border: none;
-  background-color: #f5f5f5;
+  background-color: white;
   font-family: 'Dancing Script', cursive;
   font-family: 'Raleway', sans-serif;
+  color: black
 }
 
-#dropdown-buttons button:hover {
+
+
+/* #dropdown-buttons button:hover {
   transition: 0.3s;
-  background-color: #ddd;
-}
+  color: #ddd
+} */
 
+#dropdown-buttons  {
+  color: black
+}
