More styling to splash page

--- a/react-app/src/components/SingleNote/SingleNote.css
+++ b/react-app/src/components/SingleNote/SingleNote.css
@@ -8,6 +8,10 @@
     gap: 60px;
 }
 
+.single-note-container p {
+    font-family: none
+}
+
 #button-container {
     display: flex;
     flex-direction: column;
