--- a/react-app/src/components/SignupFormModal/SignupForm.css
+++ b/react-app/src/components/SignupFormModal/SignupForm.css
@@ -1,5 +1,5 @@
 #modal-content {
-    width: auto;
+    width: 350px;
     color: white;
     background: linear-gradient(#216869, black);
     height: auto;
@@ -7,6 +7,10 @@
     border-radius: 20px;
     border: inset 10px #9CC5A1;
     padding: 30px;
+}
+
+#modal-content h1 {
+    text-align: center;
 }
 
 .profile-dropdown button {
