Added CSS to buttons inside modals

--- a/react-app/src/components/SplashPage/Splashpage.css
+++ b/react-app/src/components/SplashPage/Splashpage.css
@@ -211,6 +211,14 @@ body {
   text-decoration: underline;
 }
 
+#account-already-made button {
+  border: none;
+  background: none;
+  color: white;
+  text-decoration: underline;
+  font-size: medium;
+}
+
 
 #up {
   position: absolute;
