--- a/react-app/src/components/SplashPage/Splashpage.css
+++ b/react-app/src/components/SplashPage/Splashpage.css
@@ -153,7 +153,7 @@ body {
   align-items: center;
   justify-content: center;
   gap: 8%;
-  width: 40%;
+  width: 27%;
 }
 
 #splash-page-content-buttons button {
@@ -185,6 +185,14 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+}
+
+#splash-about-me-links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: auto;
+  gap: 5%;
 }
 
 .splash-container h3 {
