Added styling to about me links on splash page

--- a/react-app/src/components/SplashPage/Splashpage.css
+++ b/react-app/src/components/SplashPage/Splashpage.css
@@ -211,6 +211,16 @@ body {
   width: 80%;
 }
 
+#splash-about-me-links a {
+  color: white;
+  text-decoration: none;
+  text-align: center;
+}
+
+#splash-about-me-links a:hover {
+  color: #49A078
+}
+
 #account-already-made {
   border: none;
   background: none;
