--- a/react-app/src/components/Tasks/Tasks.css
+++ b/react-app/src/components/Tasks/Tasks.css
@@ -28,6 +28,20 @@
   gap: 4%;
 }
 
+#task-toggle-modal button {
+  background: none;
+  color: white;
+  border: 2px solid white;
+  border-radius: 10px;
+  padding: 9px;
+}
+
+#task-toggle-modal button:hover {
+  transition: 0.3s;
+  background: linear-gradient(#216869, #49A078);
+}
+
+
 #task-toggle-button {
   background: none;
   color: white;
