--- a/react-app/src/components/Notes/Notes.css
+++ b/react-app/src/components/Notes/Notes.css
@@ -103,29 +103,29 @@
     /* scrollbar-color: #999 #eee */
 }
 
-.note-card-container::-webkit-scrollbar {
-    width: 5px;
+.note-side-panel-card-container::-webkit-scrollbar {
+    width: 10px;
     height: 10px;
-    background: linear-gradient(#216869, #9CC5A1);
-}
+    background: rgb(73, 73, 73);
+  }
 
   /* Track */
-  .note-card-container::-webkit-scrollbar-track {
+  .note-side-panel-card-container::-webkit-scrollbar-track {
     box-shadow: inset 0 0 5px grey;
     border-radius: 10px;
-}
+  }
 
   /* Handle */
-  .note-card-container::-webkit-scrollbar-thumb {
-    background: #216869;
+  .note-side-panel-card-container::-webkit-scrollbar-thumb {
+    background: linear-gradient(#216869, #9CC5A1);
     border-radius: 10px;
-}
+  }
 
   /* Handle on hover */
-  .note-card-container::-webkit-scrollbar-thumb:hover {
+  .note-side-panel-card-container::-webkit-scrollbar-thumb:hover {
     transition: 1s;
     background: gray;
-}
+  }
 .side-panel-one-note {
     /* border: 2px solid gray; */
     width: 100%;
