--- a/react-app/src/components/HomePage/HomePage.css
+++ b/react-app/src/components/HomePage/HomePage.css
@@ -11,7 +11,6 @@ body {
     margin: 0px;
     display: flex;
     flex-direction: column;
-    align-items: cenn;
     justify-content: center;
     border: 2px solid white;
     position: relative;
@@ -20,28 +19,52 @@ body {
     background: black;
 }
 
-#inner-notes-content{
+.note-card-container::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+    background: rgb(73, 73, 73);
+}
+
+/* Track */
+.note-card-container::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+}
+
+/* Handle */
+.note-card-container::-webkit-scrollbar-thumb {
+    background: linear-gradient(#216869, #9CC5A1);
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+.note-card-container::-webkit-scrollbar-thumb:hover {
+    transition: 1s;
+    background: gray;
+}
+
+#inner-notes-content {
     display: flex;
     flex-direction: column;
     gap: 20px;
 }
 
 .notebook-notes-inner-container {
-background-color: rgb(32, 32, 32);
+    background-color: rgb(32, 32, 32);
 }
 
 .notebook-notes-inner-container:hover {
-transition: 0.3s;
-background-color: #216869;
+    transition: 0.3s;
+    background-color: #216869;
 }
 
 .notebook-notes-inner-container-two {
-background-color: rgb(32, 32, 32);
+    background-color: rgb(32, 32, 32);
 }
 
 .notebook-notes-inner-container-two:hover {
-transition: 0.3s;
-background-color: #49A078;
+    transition: 0.3s;
+    background-color: #49A078;
 
 }
 
